Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1438: "quickstart" tutorial for building a simple recommender (Maciej Mazur and Steve Cook via ssc)

  MAHOUT-1434: Dead links on the web ste (Kevin Moulart, smarthi)

  MAHOUT-1433: Make SVDRecommender look at all unknown items of a user per default (ssc)

  MAHOUT-1429: Parallelize YtransposeY in ImplicitFeedbackAlternatingLeastSquaresSolver (Adam Ilardi via ssc)

  MAHOUT-1419: Random decision forest is excessively slow on numeric features (srowen)

  MAHOUT-1417: Random decision forest implementation fails in Hadoop 2 (srowen)

  MAHOUT-1416: Make access of DecisionForest.read(dataInput) less restricted (Manoj Awasthi via smarthi)
  
  MAHOUT-1415: Clone method on sparse matrices fails if there is an empty row which has not been set explicitly (till.rohrmann via ssc)

  MAHOUT-1413: Rework Algorithms page (ssc)

  MAHOUT-1329: Mahout for hadoop 2 (gcapan, Sergey Svinarchuk)

Release 0.9 - 2014-02-01

  MAHOUT-1411: Random test failures from TDigestTest (smarthi)

  MAHOUT-1410: clusteredPoints do not contain a vector id (smarthi, Andrew Musselman)

  MAHOUT-1409: MatrixVectorView has index check error (tdunning)

  MAHOUT-1402: Zero clusters using streaming k-means option in cluster-reuters.sh (smarthi)

  MAHOUT-1401: Resurrect Frequent Pattern mining (smarthi)

  MAHOUT-1400: Remove references to deprecated and removed algorithms from examples scripts (ssc)

  MAHOUT-1399: Fixed multiple slf4j bindings when running Mahout examples issue (sslavic)

  MAHOUT-1398: FileDataModel should provide a constructor with a delimiterPattern (Roy Guo via ssc)

  MAHOUT-1396: Accidental use of commons-math won't work with next Hadoop 2 release (srowen)

  MAHOUT-1394: Undeprecate Lanczos (ssc)

  MAHOUT-1393: Remove duplicated code from getTopTerms and getTopFeatures in AbstractClusterWriter (Diego Carrion via smarthi)
